--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,16 +1,8 @@
 // Dark Theme
 $body-bg: #181817;
 $app-width: 100%;
-$borders-color: #141414;
 $text-color: #FFF;
-
-// White Theme
-/*
-$body-bg: #FFF;
-$app-width: 100%;
-$borders-color: #e5eced;
-$text-color: #000;
-*/
+$popcorn-blue: #286DC4;
 
 // Commons elements
 $header_height: 45px;
